# anki-daily-bot

./: .env.example  .gitignore  CLAUDE.MD  Makefile  README.md  pyproject.toml  requirements.txt
decks/: dsp.yaml  german.yaml
deploy/: anki-bot.service  anki-headless.service  setup_server.sh  xvfb.service
src/: bot_runner.py  data_processor.py  main.py  scheduler.py
src/ai/: __init__.py  base.py  claude_provider.py  stem_provider.py
src/anki/: connect_client.py  exporter.py  sync_manager.py
src/bot/: commands.py  lang.py  nlu.py  telegram_bot.py  wizard.py
src/card/: builder.py  models.py
src/config/: loader.py  models.py
src/media/: __init__.py  audio.py  document.py  image.py
templates/: back.html  front.html  mc_back.html  stem_back.html  stem_front.html
tests/: test_ai_provider.py  test_anki_connect.py  test_card_builder.py  test_config.py
